== 0.9

* Birthday!
* Bundled versions: goldspike-1.4-SNAPSHOT and jruby-complete-1.0.1
* Works as both a gem (rake application) or a plugin