@@ -1,5 +1,7 @@
 == 0.9
 
-* Birthday!
+* Birthday! Warbler is a gem to make a .war file out of a Rails project. The intent is to provide a
+  minimal, flexible, ruby-like way to bundle up all of your application files for deployment to a
+  Java application server.
 * Bundled versions: goldspike-1.4-SNAPSHOT and jruby-complete-1.0.1
 * Works as both a gem (rake application) or a plugin
